Applied Bootstrap to Admin section.

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,6 +1,1 @@
-Welcome <%= current_user.username %>
-
-<ul>
-  <li><%= link_to 'Manage Users', admin_users_path %></li>
-  <li><%= link_to 'Manage Pages', admin_pages_path %></li>
-</ul>
+&nbsp;
