--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div id="top">
+    <% if current_user %>
+      Welcome <%= current_user.username %>
+    <% else %>
+      <%= link_to 'Login', login_path %>
+    <% end %>
+  </div>
+  <%= yield %>
 </body>
 </html>
