--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing page</h1>
-
+<h1>Editing Page</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', @page %> |
-<%= link_to 'Back', admin_pages_path %>
