--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,27 +1,26 @@
-<h1>Listing pages</h1>
+<h1>Listing Pages</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Url</th>
-    <th>Content</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @pages.each do |page| %>
-  <%= content_tag_for :tr, page do %>
-    <td><%= page.title %></td>
-    <td><%= page.url %></td>
-    <td><%= page.content %></td>
-    <td><%= link_to 'Show', admin_page_path(page) %></td>
-    <td><%= link_to 'Edit', edit_admin_page_path(page) %></td>
-    <td><%= link_to 'Destroy', admin_page_path(page), confirm: 'Are you sure?', method: :delete %></td>
-  <% end %>
-<% end %>
+<table class="table table-bordered table-striped">
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>URL</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @pages.each do |page| %>
+      <%= content_tag_for :tr, page do %>
+        <td><%= page.title %></td>
+        <td><%= page.url %></td>
+        <td>
+          <%= link_to 'Show', admin_page_path(page), :class => 'btn btn-mini' %>
+          <%= link_to 'Edit', edit_admin_page_path(page), :class => 'btn btn-mini' %>
+          <%= link_to 'Destroy', admin_page_path(page), :confirm => 'Are you sure?', :method => :delete, :class => 'btn btn-mini btn-danger' %>
+        </td>
+      <% end %>
+    <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Page', new_admin_page_path %>
+<%= link_to 'New Page', new_admin_page_path, :class => 'btn btn-primary' %>
