--- a/app/views/admin/pages/show.html.erb
+++ b/app/views/admin/pages/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Title:</b>
   <%= @page.title %>
@@ -16,5 +14,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_admin_page_path(@page) %> |
-<%= link_to 'Back', admin_pages_path %>
+<%= link_to 'Edit', edit_admin_page_path(@page), :class => 'btn' %>
+<%= link_to 'Back', admin_pages_path, :class => 'btn' %>
