--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,10 +1,7 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Username:</b>
   <%= @user.username %>
 </p>
 
-
-<%= link_to 'Edit', edit_admin_user_path(@user) %> |
-<%= link_to 'Back', admin_users_path %>
+<%= link_to 'Edit', edit_admin_user_path(@user), :class => 'btn' %>
+<%= link_to 'Back', admin_users_path, :class => 'btn' %>
