--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,7 @@
       </div>
     </div>
   </div>
+  <%= render 'layouts/contact' %>
   <div class="container" id="body">
     <%= yield %>
   </div>
