Added Preferences and Preference Administration.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,6 +15,7 @@
           <li class="seperator"></li>
           <li><%= link_to 'Manage Users', admin_users_path %></li>
           <li><%= link_to 'Manage Pages', admin_pages_path %></li>
+          <li><%= link_to 'Manage Preferences', admin_preferences_path %></li>
           <li class="seperator"></li>
           <li><%= link_to "Leave Admin Section", root_path %></li>
           <li><%= link_to "Logout", logout_path %></li>
