Updated admin index pages.

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Users</h1>
 
-<table class="table table-bordered table-striped">
+<table id="users" class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Username</th>
