--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing Pages</h1>
 
-<table class="table table-bordered table-striped">
+<table id="pages" class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Title</th>
