--- a/app/views/admin/preferences/index.html.erb
+++ b/app/views/admin/preferences/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Listing Preferences</h1>
 
-<table class="table table-bordered table-striped">
+<table id="preferences" class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
