--- a/app/assets/stylesheets/admin/application.scss
+++ b/app/assets/stylesheets/admin/application.scss
@@ -6,12 +6,18 @@
   padding: 20px;
 }
 
-#left-nav ul li.seperator {
-  height: 15px;
+#left-nav {
+  ul {
+    li.seperator {
+      height: 15px;
+    }
+  }
 }
 
-#body h1 {
-  padding-bottom: 15px;
+#body {
+  h1 {
+    padding-bottom: 15px;
+  }
 }
 
 .input-huge {
