--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -1,7 +1,7 @@
 <div id="contact-link" data-toggle="modal" href="#contact">
   Contact
 </div>
-<div id="contact" class="modal">
+<div id="contact" class="modal hide fade">
   <div class="modal-header">
     Contact Information
   </div>
