--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
               SOCIAL MEDIA LINKS
             </div>
           </div>
-          <div class="span6">
+          <div id="heading-navbar-container" class="span6">
             <div class="navbar">
               <div class="navbar-inner">
                 <ul class="nav">
