--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,7 +17,7 @@
           <li><%= link_to 'Manage Pages', admin_pages_path %></li>
           <li><%= link_to 'Manage Preferences', admin_preferences_path %></li>
           <li class="seperator"></li>
-          <li><%= link_to "Leave Admin Section", root_path %></li>
+          <li><%= link_to "Leave Admin Area", root_path %></li>
           <li><%= link_to "Logout", logout_path %></li>
         </ul>
       </div>
