--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,8 +76,9 @@
 }
 
 #contact-link {
-  top: 450px;
   right: 0;
+  top: 50%;
+  margin: -50px 0 0 0;
   width: 38px;
   height: 100px;
   color: white;
