--- a/app/views/layouts/_contact.html.erb
+++ b/app/views/layouts/_contact.html.erb
@@ -6,6 +6,6 @@
     Contact Information
   </div>
   <div class="modal-body">
-    <%= Preference.content_for(:contact_info) %>
+    <%=m Preference.content_for(:contact_info) %>
   </div>
 </div>
